<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/dialog_icon_size"
        android:layout_height="@dimen/dialog_icon_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/music_bg_red_circle_solid"
        android:padding="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/music_ic_download_error" />

    <TextView
        style="@style/TextMusic.Header2.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/loss_of_network_title" />

    <TextView
        android:id="@+id/tvReconnecting"
        style="@style/TextMusic.Body.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:lineSpacingMultiplier="1.25"
        android:text="@string/loss_of_network_reconnecting_description"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llGoOfflineContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextMusic.Body.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:lineSpacingMultiplier="1.25"
            android:text="@string/loss_of_network_description" />

        <Button
            android:id="@+id/buttonGoOffline"
            style="@style/TextMusic.Header3.Bold.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/music_bg_rounded_button"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/go_offline_button"
            android:textAllCaps="true"
            app:backgroundTint="@color/primary"
            tools:ignore="MissingPrefix" />

    </LinearLayout>


</LinearLayout>
