<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tuning_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/collapsed_player_height"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/segmentLikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/horizontal_row_spacing"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/horizontal_row_spacing"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2"
            app:sc_border_width="1dp"
            app:sc_corner_radius="2dp"
            app:sc_tint_color="@android:color/darker_gray">

            <RadioButton
                android:id="@+id/buttonLikes"
                style="@style/RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/likes_title" />

            <RadioButton
                android:id="@+id/buttonDislikes"
                style="@style/RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dislikes_title" />
        </info.hoang8f.android.segmented.SegmentedGroup>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:indicatorColor="@color/primary"
            app:indicatorName="LineScalePartyIndicator" />

        <com.truedigital.features.tuned.presentation.common.HorizontalSeparator
            android:id="@+id/topSeparator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/layoutEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/imageViewThumb"
                android:layout_width="@dimen/large_icon_size"
                android:layout_height="@dimen/large_icon_size"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:src="@drawable/music_ic_thumb_up_hollow"
                android:tint="@color/empty_state_icon_tint" />

            <TextView
                android:id="@+id/textViewNoVoteTitle"
                style="@style/TextMusic.Header2.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/no_likes_title" />

            <TextView
                android:id="@+id/textViewNoVoteDescription"
                style="@style/TextMusic.Small.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
                android:text="@string/no_likes_description" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>